# Claude-Yazilim-Ofisi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.tr.md  SECURITY.md  install.bat  install.ps1  install.sh  software-office-install.bat  yazilim-ofisi-kur.bat
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: backend-developer.md  backend-gelistirici.md  business-analyst.md  cto.md  design-lead.md  design-reviewer.md  developer.md  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md
demo/: workflow.cast
examples/todo-cli/: README.md  pyproject.toml
examples/todo-cli/docs/adr/: 0001-language-and-stack.md  0002-storage-format.md  0003-cli-framework.md
examples/todo-cli/docs/analysis/: requirements.md
examples/todo-cli/docs/architecture/: architecture.md
examples/todo-cli/docs/product/: concept.md
examples/todo-cli/production/: backlog.md
examples/todo-cli/production/qa/: code-review-S01.md  test-evidence-S01.md
examples/todo-cli/production/retros/: S01.md
examples/todo-cli/production/sprints/: S01-2026-04-15.md
examples/todo-cli/production/stories/: 001-add-task.md  002-list-tasks.md  003-complete-task.md
examples/todo-cli/src/: __main__.py  tasks.py
examples/todo-cli/src/commands/: add.py  done.py  list_.py
examples/todo-cli/src/storage/: schema.py  sqlite.py
examples/todo-cli/tests/: conftest.py
examples/todo-cli/tests/unit/: test_storage.py  test_tasks.py
hooks/: README.md  hooks.json  post-edit-validate.sh  pre-bash-hint.sh
production/: backlog.md
scripts/: validate.py
(+62 files in other folders)
