[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-example"
version = "0.1.0"
description = "Software Office worked example — a tiny todo CLI built end-to-end via the workflow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
todo = "src.__main__:cli"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
